--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Foody</string>
+
+    <!--Region Menu -->
+    <string name="recipes_fragment">Recipes</string>
+    <string name="favorite_recipes_fragment">Favorites</string>
+    <string name="food_joke_fragment">Joke</string>
+    <!--End Region -->
+
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
