--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,19 @@
     <string name="food_joke_fragment">Joke</string>
     <!--End Region -->
 
+    <!--Region Fragment Recipes -->
+    <string name="floating_action_button">Floating action button</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="error_image_description">Error Image</string>
+    <string name="recipe_image">Recipe Image</string>
+    <string name="recipe_text">Recipe Text</string>
+    <string name="recipe_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+    <string name="number">100</string>
+    <string name="vegan_text">Vegan</string>
+    <string name="likes_description">Likes</string>
+    <string name="clock_description">Clock</string>
+    <!-- End Region -->
+
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
