--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,11 @@
     <string name="clock_description">Clock</string>
     <!-- End Region -->
 
+    <!--Region Error Messages-->
+    <string name="timeout">Timeout</string>
+    <string name="api_key_limited">API Key Limited</string>
+    <string name="recipes_not_found">Recipes Not Found</string>
+    <!--End Region-->
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
