--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!--Region Fragment Recipes -->
     <string name="floating_action_button">Floating action button</string>
     <string name="no_internet_connection">No Internet Connection</string>
+    <string name="no_internet_connection_point">No Internet Connection.</string>
     <string name="error_image_description">Error Image</string>
     <string name="recipe_image">Recipe Image</string>
     <string name="recipe_text">Recipe Text</string>
@@ -18,6 +19,7 @@
     <string name="vegan_text">Vegan</string>
     <string name="likes_description">Likes</string>
     <string name="clock_description">Clock</string>
+    <string name="back_online">We\'re back online.</string>
     <!-- End Region -->
 
     <!--Region Error Messages-->
