--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,12 @@
     <string name="search">Search</string>
     <!--End Region -->
 
+    <!--Region Details -->
+    <string name="overview">Overview</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="instructions">Instructions</string>
+    <!--End Region -->
+
     <!--Region Fragment Recipes -->
     <string name="floating_action_button">Floating action button</string>
     <string name="no_internet_connection">No Internet Connection</string>
