--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,12 @@
     <string name="cheap">Cheap</string>
     <!-- End Region -->
 
+    <!--Region Ingredients Fragment -->
+    <string name="name">Name</string>
+    <string name="grams">Grams</string>
+    <string name="consistency">Consistency</string>
+    <string name="original">Original</string>
+    <!--End Region -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
